[package]
name = "lfg"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "*", default-features = false, features = [
    "alloc",
    "now",
] }
chrono-tz = { version = "*", default-features = false }
lazy_static = { version = "*", default-features = false }
sqlx = { version = "*", default-features = false, features = ["any", "macros"] }
zayden-core = { git = "https://github.com/zayden-bot/slash-command-core.git", branch = "master" }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
# version = "*"
default-features = false
features = ["model", "rustls_backend"]
